# asemantic-protocol

./: ASEMANTIX_PoC_Demo.ipynb  README.md  pyproject.toml
asemantic_protocol/: __init__.py  crypto.py  fragment.py  state.py  validator.py
examples/: demo_minimal.py
